[tool.poetry]
name = "peanut-butter"
version = "0.1.0"
description = "PHPBB -> HTML dump converter"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
dateparser = "^1.1.8"
lxml = "^4.9.3"
mako = "^1.2.4"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
